style: home update with new pattern

--- a/Inotki/templates/home.html
+++ b/Inotki/templates/home.html
@@ -10,20 +10,19 @@
 {% endblock %}
 
 {% block body_content %}
-    <div class="margin">
-        <canvas class="background "></canvas>
+    <div class="title-home">
+        <div class="margin">
+            <h2 >
+                <p  id="live-text1"><br></p>
+                <strong id="live-text2"></strong>
+            </h2>
+        </div>
     </div>
 
-    {#    <div class="myCircle"></div>#}
-    {#    <img class="image" src="/static/img/herob.png" alt="">#}
-    <div class="margin ">
-        <h2>Task Tango, <strong>Dancing your way to productivity</strong></h2>
-    </div>
-
-    <div class="margin box">
+    <div class="margin box mb-3">
         <div class="img-column">
             <img class="image mb-1" src="/static/img/img2.png" alt="">
-            <img class="image" src="/static/img/img1.png" alt="">
+            <img class="image mt-1" src="/static/img/img1.png" alt="">
         </div>
         <p>
             <i class="fa-sharp fa-solid fa-quote-left"></i>
@@ -31,11 +30,11 @@
         </p>
     </div>
 
-    <div class="margin">
-        <img class="imageb" src="/static/img/style.png" alt="">
+    <div class="margin mb-3">
+        <div class="bg-img"></div>
     </div>
 
-    <div class="margin">
+    <div class="margin mb-3">
         <ul class="list">
             <li><p>{{ globalTaskCount }}+</p><small>Tasks </small></li>
             <li><p>{{ globalTaskCountCompleted }}</p><small>Tasks <i class="fa-solid fa-check"></i></small></li>
@@ -43,17 +42,10 @@
         </ul>
     </div>
 
-    <div class="margin text-content">
-        <h2>Revolutionize Your Task Management</h2>
-        <p>Revolutionary task manager with user-friendly platform for easy task creation, tracking and organization.
-            Try it now for improved productivity and goal achievement
-        </p>
-    </div>
-
     {% if user.is_authenticated == False %}
-        <div class="margin call-to-action">
+        <div class="margin call-to-action mb-3">
             <p>Don’t have an account yet ?</p>
-            <button class="" onclick="location.href='{% url 'register' %}'">Register</button>
+            <button class="blueButton" onclick="location.href='{% url 'register' %}'">Register</button>
             <a href="{% url 'login' %}">log in</a>
         </div>
     {% endif %}
