--- a/Inotki/static/css/home.css
+++ b/Inotki/static/css/home.css
@@ -23,14 +23,25 @@
 }
 
 /* hero */
+.title-home{
+    cursor: default;
+    background-image: url('/static/img/herom.jpeg');
+    padding-top: 7%;
+    padding-bottom: 7%;
+    margin-top: -1rem;
+    background-size: cover;
+    margin-bottom: 3rem;
+}
+
 h2{
+    padding: 7px;
+    background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #4490ff 100%);
     color: white;
-    font-family: "Poppins-Regular", monospace;
-    font-size: 2rem;
-    font-weight: 900;
+    font-family: "Poppins-Light", monospace;
+    font-size: 1.7rem;
+    font-weight: 300;
     letter-spacing: .07em;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin: 7rem 0rem;
     text-align: center;
 }
 
@@ -57,8 +68,8 @@ h2 strong{
     margin-right: 1rem;
 }
 
-.mb-1{
-    margin-bottom: 1rem;
+.mb-3{
+    margin-bottom: 3rem;
 }
 
 /* small part with images */
@@ -71,7 +82,6 @@ h2 strong{
 
 .box p{
     color: white;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     border-radius: 15px;
     background-image: radial-gradient(100% 100% at 100% 0, #77b8d3 0, #2589B4 100%);
     padding: 1rem 1rem 1rem 8rem;
@@ -92,21 +102,33 @@ h2 strong{
 .margin {
     margin-left: 5vw;
     margin-right: 5vw;
-    margin-bottom: 1rem;
 }
 
 /* image */
-.imageb{
-    margin-top: 1rem;
+.bg-img {
+    background-image: url('/static/img/herom.jpeg');
+    background-attachment: fixed;
+    background-size: cover;
+    height:25rem;
     width: 100%;
-    height: auto;
-    border-radius: 5px;
+    border-radius: 15px;
+    margin: 2rem 0 3rem;
 }
+
+.mb-1{
+    margin-bottom: 1rem;
+}
+
+.mt-1{
+    margin-bottom: 1rem;
+}
+
 /* more info */
 .list{
-    margin-top: 3rem;
+    cursor: default;
+    margin-top: 4rem;
     border-radius: 15px;
-    background-image: radial-gradient(100% 100% at 100% 0, #4490ff 0, #1b61c2 100%);
+    background-image: radial-gradient(100% 100% at 100% 0, #77b8d3 0, #2589B4 100%);
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -114,13 +136,19 @@ h2 strong{
     padding: 2rem 1rem;
     color: white;
     font: 1rem "Poppins-Light";
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .list li{
     display: flex;
     align-items: center;
     flex-direction: column;
+    transition: transform 0.2s ease-in-out;
+}
+
+.list li:hover {
+    /* Zoom in the text */
+    transform: scale(1.2);
+    transition: transform 0.2s ease-in-out;
 }
 
 .list li p{
@@ -151,7 +179,6 @@ h2 strong{
 .call-to-action{
     display: flex;
     flex-direction: column;
-
 }
 
 .call-to-action a{
@@ -164,20 +191,19 @@ h2 strong{
 }
 
 .call-to-action p{
-    margin-top: 2rem;
+    cursor: default;
     margin-bottom: .2rem;
     font: .8rem "Poppins-Regular";
     color: rgba(51, 51, 51, 0.78);
 }
 
 .call-to-action button{
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
     background-color: #1F1F1F;
     font: 1rem "Poppins-Regular";
     border-radius: 15px;
     padding: .8rem .8rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     border: none;
     color: white;
     cursor: pointer;
@@ -188,6 +214,15 @@ h2 strong{
 }
 
 @media all and (min-width: 991px) {
+
+    .bg-img {
+        height:30rem;
+    }
+
+    h2{
+        margin: 4rem 0rem;
+    }
+
     .margin {
         margin-left: 20vw;
         margin-right: 20vw;
