--- a/Inotki/static/css/form.css
+++ b/Inotki/static/css/form.css
@@ -17,7 +17,28 @@ h2 a:hover {
     /*-webkit-text-stroke: 1px #3584ff;*/
 }
 
-h3{
+.title-article{
+    font: 1.9rem "Poppins-bold";
+    color: #333;
+    margin-bottom: 1rem;
+    font-weight: 700;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.title-article a p{
+    color: #333;
+}
+
+.title-article a p:hover {
+    font: 1.9rem "Poppins-bold";
+    font-weight: 700;
+    color: #3584ff;
+    /*-webkit-text-stroke: 1px #3584ff;*/
+}
+
+.title {
     font: 1.3rem "Poppins-Regular";
     color: #333;
     margin-bottom: .6rem;
@@ -44,8 +65,8 @@ form {
     color: rgba(73, 147, 255, 0.75);
 }
 
- /* when i open my menu, my form go to the background */
- .open form{
+/* when i open my menu, my form go to the background */
+.open form{
     position: relative;
     z-index: -999;
 }
