--- a/Inotki/static/css/home.css
+++ b/Inotki/static/css/home.css
@@ -33,7 +33,7 @@
     margin-bottom: 3rem;
 }
 
-h2{
+.title-top {
     padding: 7px;
     background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #4490ff 100%);
     color: white;
@@ -41,11 +41,11 @@ h2{
     font-size: 1.7rem;
     font-weight: 300;
     letter-spacing: .07em;
-    margin: 7rem 0rem;
+    margin: 7rem 0;
     text-align: center;
 }
 
-h2 strong{
+.title-top strong{
     font-family: "Poppins-bold", monospace;
 }
 
@@ -65,7 +65,7 @@ h2 strong{
     width: 6rem;
     height: auto;
     border-radius: 15px;
-    margin-right: 1rem;
+    margin-left: 1rem;
 }
 
 .mb-3{
@@ -84,7 +84,7 @@ h2 strong{
     color: white;
     border-radius: 15px;
     background-image: radial-gradient(100% 100% at 100% 0, #77b8d3 0, #2589B4 100%);
-    padding: 1rem 1rem 1rem 8rem;
+    padding: 1rem 1rem 1rem 9rem;
     margin-left: -8rem;
     font: 1rem "Poppins-Light";
     font-weight: 100;
@@ -213,6 +213,77 @@ h2 strong{
     background-color: rgba(31, 31, 31, 0.85);
 }
 
+/* Articles */
+.article {
+    padding-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow-x: scroll;
+}
+
+.article-zone{
+    background-color: rgba(229, 229, 229, 0.23);
+}
+
+.article-box-sol {
+    display: flex;
+    flex-direction: column;
+    padding: .6rem;
+    margin: .2rem 3rem 1rem .7rem;
+    border-radius: 15px;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.article-box {
+    padding: 2rem;
+    position: relative;
+    width: 16rem;
+    height: 15rem;
+}
+
+.article-box h3 {
+    position: absolute;
+    top: 1rem;
+    font-family: "Poppins-Light", monospace;
+    font-size: 1.2rem;
+}
+
+.article-box p {
+    position: absolute;
+    top: 4rem;
+    font-family: "Poppins-Light", monospace;
+    font-size: 1rem;
+}
+
+.article-box button {
+    position: absolute;
+    bottom: 1rem;
+    font-family: "Poppins-Light", monospace;
+    font-size: 1rem;
+    padding: .6rem;
+    background-color: #333;
+    border-radius: 15px;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.paragraph{
+    margin-bottom: 3rem;
+}
+
+.summary a{
+    color: #969696;
+    font-family: "Poppins-Light", monospace;
+    font-size: .9rem;
+    margin: 3rem 1rem;
+}
+
+.summary a:hover{
+    color: #525252;
+}
+
 @media all and (min-width: 991px) {
 
     .bg-img {
@@ -229,7 +300,7 @@ h2 strong{
     }
 
     .box p{
-        padding: 2rem 2rem 2rem 8rem;
+        padding: 2rem 2rem 2rem 9rem;
     }
 }
 
