--- a/Inotki/templates/home.html
+++ b/Inotki/templates/home.html
@@ -3,6 +3,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/home.css' %}" />
+    <script src="{% static 'js/home.js' %}" defer></script>
 {% endblock %}
 
 {% block title %}
@@ -12,8 +13,8 @@
 {% block body_content %}
     <div class="title-home">
         <div class="margin">
-            <h2 >
-                <p  id="live-text1"><br></p>
+            <h2 class="title-top">
+                <p id="live-text1"></p>
                 <strong id="live-text2"></strong>
             </h2>
         </div>
@@ -49,5 +50,31 @@
             <a href="{% url 'login' %}">log in</a>
         </div>
     {% endif %}
+
+    <div class="article-zone">
+        <div class="article margin mb-3">
+            <div class="article-box-sol">
+                <div class="article-box">
+                    <h3>Good Task ?</h3>
+                    <p>How to set up a good Task ?</p>
+                    <button class="readmore" onclick="location.href='{% url 'article-task' %}'">Read more</button>
+                </div>
+            </div>
+            <div class="article-box-sol">
+                <div class="article-box">
+                    <h3>Productivity ?</h3>
+                    <p>3 ways to improve your productivity ?</p>
+                    <button class="readmore" onclick="location.href='{% url 'article-productivity' %}'">Read more</button>
+                </div>
+            </div>
+            <div class="article-box-sol">
+                <div class="article-box">
+                    <h3>Use it !</h3>
+                    <p>How to use Inolii ?</p>
+                    <button class="readmore" onclick="location.href='{% url 'article-use-it' %}'">Read more</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
