--- a/Inotki/templates/base/user_delete.html
+++ b/Inotki/templates/base/user_delete.html
@@ -13,11 +13,11 @@
 {% block body_content %}
     <h2><a href="{% url 'option_update' %}"><i class="fa-sharp fa-solid fa-gear"></i> <p>Settings</p></a></h2>
 
-    <h3>Second Thoughts - Retracting Account Deletion Request</h3>
+    <h3 class="title">Second Thoughts - Retracting Account Deletion Request</h3>
     <p class="paragraph">After giving it further thought, would you like to retract your request for account deletion and keep your account active? <br>
         <a href="{% url 'option_update' %}">go back </a>
     </p>
-    <h3>Knowing Beforehand - Importance of Backing Up Data before Account Deletion</h3>
+    <h3 class="title">Knowing Beforehand - Importance of Backing Up Data before Account Deletion</h3>
     <p  class="paragraph">
         Before your account is deleted, none of the data associated with it will be recoverable or retrievable.
         This includes personal information, documents, and any other data that was stored within the account.
