--- a/Inotki/templates/article/productivity.html
+++ b/Inotki/templates/article/productivity.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'main_footer.html' %}
 {% load static %}
 
 {% block css %}
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block title %}
-    Home
+    Article
 {% endblock %}
 
 {% block body_content %}
@@ -19,9 +19,9 @@
 
         <div class="summary">
             <ul>
-                <li><a href="#title1">◗ Inolii: An Online Task Management Tool for Organized Productivity</a> </li>
-                <li><a href="#title2">◗ Maximize Productivity with Inolii's Task Sharing and Reminder Features</a></li>
-                <li><a href="#title3">◗ Inolii's user-friendly interface for an easy and efficient task management</a></li>
+                <li><a href="">◗ Inolii: An Online Task Management Tool for Organized Productivity</a> </li>
+                <li><a href="#title1">◗ Maximize Productivity with Inolii's Task Sharing and Reminder Features</a></li>
+                <li><a href="#title2">◗ Inolii's user-friendly interface for an easy and efficient task management</a></li>
             </ul>
         </div>
 
