--- a/Inotki/templates/article/useit.html
+++ b/Inotki/templates/article/useit.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'main_footer.html' %}
 {% load static %}
 
 {% block css %}
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block title %}
-    Home
+    Article
 {% endblock %}
 
 {% block body_content %}
@@ -19,9 +19,9 @@
 
         <div class="summary">
             <ul>
-                <li><a href="#title1">◗ The Benefits of Using a Task Manager: Increased Productivity and Organization</a> </li>
-                <li><a href="#title2">◗ Collaboration and Task Sharing: How a Task Manager Can Improve Teamwork</a></li>
-                <li><a href="#title3">◗ Integration and Customization: How a Task Manager Can Fit Your Workflow and Needs</a></li>
+                <li><a href="">◗ The Benefits of Using a Task Manager: Increased Productivity and Organization</a> </li>
+                <li><a href="#title1">◗ Collaboration and Task Sharing: How a Task Manager Can Improve Teamwork</a></li>
+                <li><a href="#title2">◗ Integration and Customization: How a Task Manager Can Fit Your Workflow and Needs</a></li>
             </ul>
         </div>
 
