--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -24,7 +24,7 @@
     <script src="{% static 'js/app.js' %}" defer></script>
     {% block css %}{% endblock css %}
 
-    <!-- names: iloni, Inolii, idoka, igora, glomera, Inolii-->
+    <!-- names: iloni, Inolii, idoka, igora, glomera, Inolii, Linloow-->
     <title>
         {% filter default:0|add:' -' %}{% block title %}{% endblock title %}
         {%endfilter %} Inolii
@@ -121,5 +121,6 @@
     <h1 class="d-none">Task manager</h1>
     {% block body_content %}{% endblock %}
 </section>
+
 </body>
 </html>
