--- a/Inotki/templates/article/task.html
+++ b/Inotki/templates/article/task.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'main_footer.html' %}
 {% load static %}
 
 {% block css %}
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block title %}
-    Home
+    Article
 {% endblock %}
 
 {% block body_content %}
@@ -19,9 +19,9 @@
 
         <div class="summary">
             <ul>
-                <li><a href="#title1">◗ Creating Effective Tasks: Tips for Setting Up Clear and Actionable Goals</a> </li>
-                <li><a href="#title2">◗ Prioritizing Tasks: How to Determine What's Important and Tackle it First</a></li>
-                <li><a href="#title3">◗ Staying on Track: Tips for Monitoring Progress and Staying Accountable</a></li>
+                <li><a href="">◗ Creating Effective Tasks: Tips for Setting Up Clear and Actionable Goals</a> </li>
+                <li><a href="#title1">◗ Prioritizing Tasks: How to Determine What's Important and Tackle it First</a></li>
+                <li><a href="#title2">◗ Staying on Track: Tips for Monitoring Progress and Staying Accountable</a></li>
             </ul>
         </div>
 
