qa: app name has been updated

--- a/Inotki/templates/article/information/terms_service.html
+++ b/Inotki/templates/article/information/terms_service.html
@@ -32,45 +32,45 @@
 
         <h3 class="title" id="title1">Introduction</h3>
         <p class="paragraph">
-            These Terms of Service govern your use of Inolii,
-            an online task management tool, and any services provided by Inolii.
+            These Terms of Service govern your use of Igonii,
+            an online task management tool, and any services provided by Igonii.
             By using our app, you agree to be bound by these terms.
         </p>
 
         <h3 class="title" id="title2">Prohibited Conduct</h3>
         <p class="paragraph">
-            Inolii prohibits users from engaging in any illegal, fraudulent, or harmful conduct while using our
+            Igonii prohibits users from engaging in any illegal, fraudulent, or harmful conduct while using our
             services. Users also agree not to reproduce, duplicate, copy, sell, resell, or exploit any portion
-            of Inolii without our express written permission.
+            of Igonii without our express written permission.
         </p>
 
         <h3 class="title" id="title3">Content Ownership</h3>
         <p class="paragraph">
-            Users retain ownership of any content they upload or create using Inolii,
-            but by using our services, users grant Inolii a license to use, host, and display such content.
+            Users retain ownership of any content they upload or create using Igonii,
+            but by using our services, users grant Igonii a license to use, host, and display such content.
         </p>
 
         <h3 class="title" id="title4">Modification and Termination</h3>
         <p class="paragraph">
-            Inolii reserves the right to modify or discontinue our services at any time.
+            Igonii reserves the right to modify or discontinue our services at any time.
             We will not be liable to users or any third party for any such modification or discontinuation.
         </p>
 
         <h3 class="title" id="title5">Warranties and Disclaimers</h3>
         <p class="paragraph">
-            Inolii reserves the right to modify or discontinue our services at any time.
+            Igonii reserves the right to modify or discontinue our services at any time.
             We will not be liable to users or any third party for any such modification or discontinuation.
         </p>
 
         <h3 class="title" id="title6">Indemnification</h3>
         <p class="paragraph">
-            Inolii reserves the right to modify or discontinue our services at any time.
+            Igonii reserves the right to modify or discontinue our services at any time.
             We will not be liable to users or any third party for any such modification or discontinuation.
         </p>
 
         <h3 class="title" id="title7">Governing Law</h3>
         <p class="paragraph">
-            Inolii reserves the right to modify or discontinue our services at any time.
+            Igonii reserves the right to modify or discontinue our services at any time.
             We will not be liable to users or any third party for any such modification or discontinuation.
         </p>
 
