--- a/Inotki/templates/article/productivity.html
+++ b/Inotki/templates/article/productivity.html
@@ -19,34 +19,34 @@
 
         <div class="summary">
             <ul>
-                <li><a href="">◗ Inolii: An Online Task Management Tool for Organized Productivity</a> </li>
-                <li><a href="#title1">◗ Maximize Productivity with Inolii's Task Sharing and Reminder Features</a></li>
-                <li><a href="#title2">◗ Inolii's user-friendly interface for an easy and efficient task management</a></li>
+                <li><a href="">◗ Igonii: An Online Task Management Tool for Organized Productivity</a> </li>
+                <li><a href="#title1">◗ Maximize Productivity with Igonii's Task Sharing and Reminder Features</a></li>
+                <li><a href="#title2">◗ Igonii's user-friendly interface for an easy and efficient task management</a></li>
             </ul>
         </div>
 
-        <h3 class="title" id="title1">Inolii: An Online Task Management Tool for Organized Productivity</h3>
+        <h3 class="title" id="title1">Igonii: An Online Task Management Tool for Organized Productivity</h3>
         <p class="paragraph">
             In today's fast-paced world, staying organized and on top of tasks is essential for productivity.
-            Inolii is an online task management tool designed to help individuals and small businesses achieve just
-            that. With Inolii, users can create tasks, set deadlines, and track their progress in real-time.
+            Igonii is an online task management tool designed to help individuals and small businesses achieve just
+            that. With Igonii, users can create tasks, set deadlines, and track their progress in real-time.
             It also provides a range of other features such as task sharing, task reminders, and task notes.
-            Inolii is easy to use and provides an intuitive interface that makes it simple to get started
+            Igonii is easy to use and provides an intuitive interface that makes it simple to get started
             with task management.
         </p>
 
-        <h3 class="title" id="title2">Maximize Productivity with Inolii's Task Sharing and Reminder Features</h3>
+        <h3 class="title" id="title2">Maximize Productivity with Igonii's Task Sharing and Reminder Features</h3>
         <p class="paragraph">
-            One of the key features of Inolii is its task sharing functionality, which allows users to share
+            One of the key features of Igonii is its task sharing functionality, which allows users to share
             tasks with team members or collaborators. This feature is especially useful for small businesses or
-            teams working on a project together. Additionally, Inolii also offers task reminders, which can be set
+            teams working on a project together. Additionally, Igonii also offers task reminders, which can be set
             up to send notifications to users, ensuring that they never miss a deadline or important task. Together,
             these features help users to stay on top of their tasks and maximize productivity.
         </p>
 
-        <h3 class="title" id="title3">Inolii's user-friendly interface for an easy and efficient task management</h3>
+        <h3 class="title" id="title3">Igonii's user-friendly interface for an easy and efficient task management</h3>
         <p class="paragraph">
-            Inolii's user-friendly interface makes it easy to use for people of all skill levels.
+            Igonii's user-friendly interface makes it easy to use for people of all skill levels.
             The tool's navigation is simple and straightforward, and it's designed to be intuitive and easy
             to understand.
             The interface also allows users to quickly and easily access all of the
@@ -74,7 +74,7 @@
             <div class="article-box-sol">
                 <div class="article-box">
                     <h3>Use it !</h3>
-                    <p>How to use Inolii ?</p>
+                    <p>How to use Igonii ?</p>
                     <button class="readmore" onclick="location.href='{% url 'article-use-it' %}'">Read more</button>
                 </div>
             </div>
