--- a/Inotki/templates/base/user_detail.html
+++ b/Inotki/templates/base/user_detail.html
@@ -27,7 +27,7 @@
                 {% if user_profile.profile.bio %}
                 <p class="account-bio"><i class="fa-solid fa-scroll"></i> {{ user_profile.profile.bio }}</p>
                 {% endif %}
-                <h3>Inolii member since</h3>
+                <h3>Igonii member since</h3>
                 <p class="account-bio"><i class="fa-solid fa-calendar-days"></i> {{ user_profile.date_joined  }}</p>
                 <a class="edit" href="{% url 'profile_update' %}">Edit</a>
             </div>
