--- a/Inotki/templates/article/information/contact_us.html
+++ b/Inotki/templates/article/information/contact_us.html
@@ -30,18 +30,18 @@
 
         <h3 class="title" id="title1">Introduction</h3>
         <p class="paragraph">
-            Inolii welcomes any questions, comments, or concerns about our online task management tool and services.
+            Igonii welcomes any questions, comments, or concerns about our online task management tool and services.
             To contact us, please use the information provided below.
         </p>
 
         <h3 class="title" id="title2">Contact Information</h3>
         <p class="paragraph">
-            Email: info@inolii.com
+            Email: info@Igonii.com
         </p>
 
         <h3 class="title" id="title3">Business Hours</h3>
         <p class="paragraph">
-            Inolii welcomes any questions, comments, or concerns about our online task management tool and services.
+            Igonii welcomes any questions, comments, or concerns about our online task management tool and services.
             To contact us, please use the information provided below.
         </p>
 
@@ -52,10 +52,10 @@
 
         <h3 class="title" id="title4">Email Example</h3>
         <p class="paragraph">
-            Subject: Question about Inolii's features <br><br>
-            Dear Inolii Team,<br>
+            Subject: Question about Igonii's features <br><br>
+            Dear Igonii Team,<br>
             I am writing to inquire about the features of your task management tool. <br>
-            Can you please provide me with more information on how I can collaborate with my team members on Inolii?<br>
+            Can you please provide me with more information on how I can collaborate with my team members on Igonii?<br>
             Thank you for your time. <br>
             Best regards, <br>
             [Your Name]<br>
