--- a/Inotki/templates/article/information/gdpr.html
+++ b/Inotki/templates/article/information/gdpr.html
@@ -30,40 +30,40 @@
 
         <h3 class="title" id="title1">Notice and Consent</h3>
         <p class="paragraph">
-            Inolii provides clear and transparent notice to our users about the types of personal data we collect,
+            Igonii provides clear and transparent notice to our users about the types of personal data we collect,
             how we use it, and who we share it with. We obtain explicit consent from our users for the collection
             and processing of their personal data.
         </p>
 
         <h3 class="title" id="title2">Data Processing and Security</h3>
         <p class="paragraph">
-            Inolii implements strict security measures to protect our users' personal
+            Igonii implements strict security measures to protect our users' personal
             data from unauthorized access or breaches. We regularly review and update
             these measures to ensure that they remain effective.
         </p>
 
         <h3 class="title" id="title3">Data Access and Portability</h3>
         <p class="paragraph">
-            Inolii provides our users with the ability to access, correct, and delete their personal data.
+            Igonii provides our users with the ability to access, correct, and delete their personal data.
             Additionally, we allow users to request a copy of their personal data in a machine-readable format.
         </p>
 
         <h3 class="title" id="title4">Data Breaches</h3>
         <p class="paragraph">
-            Inolii has implemented procedures to detect, investigate, and report data breaches
+            Igonii has implemented procedures to detect, investigate, and report data breaches
             to the appropriate authorities. We will notify affected users without undue delay if a data breach occurs.
         </p>
 
         <h3 class="title" id="title5">Data Protection Officer</h3>
         <p class="paragraph">
-            Inolii has appointed a Data Protection Officer (DPO)
+            Igonii has appointed a Data Protection Officer (DPO)
             who is responsible for monitoring compliance with GDPR and providing advice
             and guidance on data protection matters.
         </p>
 
         <h3 class="title" id="title6">International Data Transfer</h3>
         <p class="paragraph">
-            Inolii ensures that any transfer of personal data outside the EU is done in compliance with GDPR.
+            Igonii ensures that any transfer of personal data outside the EU is done in compliance with GDPR.
         </p>
     </div>
 
