--- a/Inotki/templates/article/useit.html
+++ b/Inotki/templates/article/useit.html
@@ -51,7 +51,7 @@
             Once you have set up your tasks and prioritized them, it's important to stay on track and monitor
             your progress. One way to do this is by breaking tasks down into smaller, manageable steps and setting
             deadlines for each step. Additionally, it's important to stay accountable for your progress by regularly
-            reviewing your tasks and checking off completed items. A Task manager such as Inolii can be helpful for
+            reviewing your tasks and checking off completed items. A Task manager such as Igonii can be helpful for
             monitoring progress and staying accountable, as it allows users to track their progress in real-time and
             set reminders for tasks.
         </p>
@@ -76,7 +76,7 @@
             <div class="article-box-sol">
                 <div class="article-box">
                     <h3>Use it !</h3>
-                    <p>How to use Inolii ?</p>
+                    <p>How to use Igonii ?</p>
                     <button class="readmore" onclick="location.href='{% url 'article-use-it' %}'">Read more</button>
                 </div>
             </div>
