--- a/Inotki/templates/main_footer.html
+++ b/Inotki/templates/main_footer.html
@@ -173,7 +173,7 @@
             <ul>
                 {% if request.user.is_authenticated %}
                     <li><a href="{% url 'tasks' %}">Task</a></li>
-                    <li><a href={% url 'tags' %}"">Tag</a></li>
+                    <li><a href="{% url 'tags' %}">Tag</a></li>
                     <li><a href="{% url 'profile' %}">Profile</a></li>
                     <li><a href="{% url 'option_update' %}">Settings</a></li>
                     <li><a href="{% url 'notification' %}">Notification</a></li>
